--- a/.github/workflows/build-container.yaml
+++ b/.github/workflows/build-container.yaml
@@ -17,7 +17,7 @@ env:
   REGISTRY: ghcr.io
   REPOSITORY: ${{ github.repository_owner }}
   IMAGE_NAME: calcaura-pecunia-dev-env
-  VERSION: 1.0.5
+  VERSION: 1.0.6
 
 jobs:
   build-and-push-image:
@@ -35,6 +35,12 @@ jobs:
         uses: actions/checkout@v4
         with:
           fetch-depth: 1
+
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v3
+
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
 
       - name: Log in to the container registry
         if: github.ref == 'refs/heads/main'
@@ -60,6 +66,7 @@ jobs:
         with:
           context: ./
           file: ./build-env/Dockerfile
+          platforms: linux/amd64,linux/arm64
           push: ${{ github.ref == 'refs/heads/main' }}
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
